# obs-playout

./: BUILD-FAILURE-RESOLVED.md  CHANGELOG.md  CMAKE-DETECTION-FIXED.md  CMAKE-ERROR-RESOLVED.md  CMakeLists.txt  COMPREHENSIVE-OBS-RESOLUTION.md  CRITICAL-ERRORS-RESOLVED.md  ENHANCED-CMAKE-DETECTION.md  ERROR-RESOLUTION.md  GITHUB-ACTIONS-LATEST-STATUS.md  GITHUB-ACTIONS-RESOLUTION.md  LICENSE  README.md  RECENT-ERRORS-RESOLVED.md  ROBUST-FALLBACK-IMPLEMENTED.md  STATUS.md  TASK-RESUMED.md  WINDOWS-BUILD-FIXED.md  WINDOWS-FILENAME-FIXED.md  WINDOWS-URL-FIXED.md  buildspec.json  monitor-builds.md  plugin-support.h  sample-schedule.json
.github/workflows/: build.yml  release.yml
cmake/common/: osconfig.cmake
data/locale/: en-US.ini
src/: media-controller.cpp  media-controller.h  playlist-manager.cpp  playlist-manager.h  plugin-main.cpp  scheduler-core.cpp  scheduler-core.h  time-trigger.cpp  time-trigger.h
src/ui/: schedule-editor.cpp  schedule-editor.h  settings-dialog.cpp  settings-dialog.h
src/utils/: config.cpp  config.h  file-watcher.cpp  file-watcher.h  logger.cpp  logger.h
tests/: CMakeLists.txt
tests/unit/: test-scheduler.cpp
